--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Zach's 2020 Projects</title>
   </head>
   <body>
+    <h1>Zach's Projects</h1>
+    <p>Fall 2020</p>
     <ul>
-      <li><a href="/ground-rain/index.html">Ground Rain Project</a></li>
-      <li><a href="/instruments/index.html">Instruments Project</a></li>
+      <li><a href="./ground-rain/index.html">Ground Rain Project</a></li>
+      <li><a href="./instruments/index.html">Instruments Project</a></li>
     </ul>
   </body>
 </html>
