Vending machine project

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
       <li><a href="./ground-rain/index.html">Ground Rain Project</a></li>
       <li><a href="./instruments/index.html">Instruments Project</a></li>
+      <li><a href="./vendingMachine/index.html">Vending Machine</a></li>
     </ul>
   </body>
 </html>
