--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       <li><a href="./ground-rain/index.html">Ground Rain Project</a></li>
       <li><a href="./instruments/index.html">Instruments Project</a></li>
       <li><a href="./vendingMachine/index.html">Vending Machine</a></li>
+      <li><a href="./ticTacToe/index.html">Tic Tac Toe</a></li>
+      <li><a href="./animationLab/index.html">Animation lab</a></li>
     </ul>
   </body>
 </html>
