--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <li><a href="./vendingMachine/index.html">Vending Machine</a></li>
       <li><a href="./ticTacToe/index.html">Tic Tac Toe</a></li>
       <li><a href="./animationLab/index.html">Animation lab</a></li>
+      <li><a href="./vueIntro/index.html">Vue Intro</a></li>
     </ul>
   </body>
 </html>
