--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <li><a href="./ticTacToe/index.html">Tic Tac Toe</a></li>
       <li><a href="./animationLab/index.html">Animation lab</a></li>
       <li><a href="./vueIntro/index.html">Vue Intro</a></li>
+      <li><a href="./dataApp/dist/">Data App (Magic the Gathering)</a></li>
     </ul>
   </body>
 </html>
